# LVGL_Clion

./: .cproject  .mxproject  .project  CMakeLists.txt  LVGL_Clion.ioc  LVGL_Clion.xml  README.md  stm32f4discovery.cfg
Core/Src/: gpio.c  main.c  tim.c
GUI/lvgl/: lv_port_disp.c  lv_port_disp.h
